fixed overflow

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -166,7 +166,6 @@ html,body{
     outline: none;
     padding: 0;
     margin: 0;
-    min-height: 100vh;
     font-family: var(--regular), sans-serif;
     font-size: var(--normal);
     font-weight: normal;
@@ -176,6 +175,9 @@ html,body{
     display: flex;
     flex-direction: column;
     background: var(--coal);
+    min-height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
 } body{
     display: flex;
     flex-direction: column;
