--- a/CSS/prefixed.css
+++ b/CSS/prefixed.css
@@ -166,7 +166,6 @@ html,body{
     outline: none;
     padding: 0;
     margin: 0;
-    min-height: 100vh;
     font-family: var(--regular), sans-serif;
     font-size: var(--normal);
     font-weight: normal;
@@ -181,6 +180,9 @@ html,body{
         -ms-flex-direction: column;
             flex-direction: column;
     background: var(--coal);
+    min-height: 100vh;
+    max-width: 100vw;
+    overflow-x: hidden;
 } body{
     display: -webkit-box;
     display: -ms-flexbox;
